2005-01-16  Fred Kiefer <FredKiefer@gmx.de>

	* Printing/GSCUPS/GSCUPSPrinter.m (+printerNames): Add dummy
	printer to list, if no printers are found.

2005-01-16 06:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSDocument.m: In validateMenuItem: added code to 
	properly set the undo/redo title and disable the menus when
	appropriate.

2005-01-15 05:59 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSDocument.m: Added undo:/redo: here.  Smarter use
	of the responder chain.
	* Source/NSWindow.m: Removed undo:/redo: here.

2005-01-14 16:11  Alexander Malmberg <alexander@malmberg.org>

	* Headers/AppKit/NSSavePanel.h (-panel:shouldShowFilename:):
	Document.
	* Source/NSSavePanel.m (-setDelegate:): Call -validateVisibleColumns.
	Whitespace cleanups.
	(-browser:isColumnValid:): Give the delegate the complete path to
	each file.

	Fixes bug #10553.

2005-01-14 09:25 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSDocument.m: Minor change.  The init method now sets the
	flag to YES so that when a undoManager is needed, it's instantiated.

2005-01-14 05:50 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSDocument.m: corrected undoManager call in NSDocument.

2005-01-13  Adam Fedor  <fedor@gnu.org>

	* Source/GNUmakefile.preamble: Extend FILTER_OUT flag to
	all sparc architectures.

2005-01-12 16:40  Alexander Malmberg <alexander@malmberg.org>

	* Headers/AppKit/NSBezierPath.h (-windingCountAtPoint:): Mark as
	a GNUstep extension.

2005-01-12 00:47  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSStandardWindowDecorationView.m (-initWithFrame:window:):
	Create a paragraph style with line-breaking-by-clipping and use it
	for window titles.

2005-01-12 00:41  Alexander Malmberg <alexander@malmberg.org>

	* Printing/GSCUPS/GSCUPSPrinter.h (GSCUPSDummyPrinterName): New
	variable.
	* Printing/GSCUPS/GSCUPSPrinter.m (GSCUPSDummyPrinterName): New
	variable.