@@ -1,5 +1,11 @@
 2005-01-16  Fred Kiefer <FredKiefer@gmx.de>
 
+	* TextConverters/RTF/RTFProducer.m (-_stringWithRTFCharacters:):
+	Output "\uc0" so that other applications know we don't write ANSI
+	representations of Unicode characters.
+
+2005-01-16  Fred Kiefer <FredKiefer@gmx.de>
+
 	* Printing/GSCUPS/GSCUPSPrinter.m (+printerNames): Add dummy
 	printer to list, if no printers are found.
 
